...
                                                ),
                                                TextButton(
                                                  onPressed: () =>
                                                      Navigator.pop(
                                                          alertDialogContext,
                                                          true),
                                                  child: Text('Confirmar'),
                                                ),
                                              ],
                                            );
                                          },
                                        ) ??
                                        false;
...
                                            _model.responseForm = false;
                                          }
                                          _shouldSetState = true;
                                          if (_model.responseForm!) {
                                            _model.reponseUserAuth =
                                                await AddUserCall.call(
                                              email: _model
                                                  .mailAgentTextController.text,
                                              password: _model
                                                  .passwordAgentTextController
                                                  .text,
                                            );

                                            _shouldSetState = true;
                                            if ((_model.reponseUserAuth
...
