...
        title: 'Usuarios',
        icon: Icons.people_outline,
        route: '/mainUsers',
        requiredRoles: [1, 2], // Admin and Super Admin only
      ),
      BukeerNavItem(
        title: 'Perfil',
        icon: Icons.person_outline,
        route: '/mainProfilePage',
      ),
    ];
  }
}
...
