...
                  color: BukeerColors.getTextColor(context,
                      type: TextColorType.secondary),
                  size: 24.0,
                ),
                const Padding(
                  padding: EdgeInsetsDirectional.fromSTEB(12.0, 0.0, 0.0, 0.0),
                  child: Text('Cerrar sesión'),
                ),
              ],
            ),
          ),
        ),
      ),
...
