...
          children: [
            DrawerHeader(
              child: MainLogoSmallWidget(),
            ),
            ListTile(
              leading: Icon(Icons.home),
              title: Text('Inicio'),
              onTap: () => context.pushNamed('home'),
            ),
            ListTile(
              leading: Icon(Icons.person),
              title: Text('Perfil'),
              onTap: () => context.pushNamed('profile'),
...
