...
                                                                        false,
                                                                    decoration:
                                                                        InputDecoration(
                                                                      isDense:
                                                                          false,
                                                                      labelText:
                                                                          'Buscar',
                                                                      alignLabelWithHint:
                                                                          false,
                                                                      enabledBorder:
                                                                          OutlineInputBorder(
                                                                        borderSide:
                                                                            BorderSide(
...
                                                                                    letterSpacing: 0.0,
                                                                                    fontWeight: FontWeight.w600,
                                                                                    useGoogleFonts: !FlutterFlowTheme.of(context).bodyMediumIsCustom,
                                                                                  ),
                                                                            ),
                                                                            Text(
                                                                              'Total: ${formatNumber(
                                                                                (String valor) {
                                                                                  return double.tryParse(valor ?? '') ?? 0.0;
                                                                                }(getJsonField(
                                                                                  ventaItemItem,
                                                                                  r'''$.total_amount''',
                                                                                ).toString()),
...
