...

  String _getLabelForSelection(int? selection) {
    switch (selection) {
      case 1:
        return 'Dashboard';
      case 2:
        return 'Itinerarios';
      case 3:
        return 'Productos';
      case 4:
        return 'Contactos';
      case 5:
        return 'Usuarios';
...
