...
                      ),
                      Padding(
                        padding: EdgeInsets.only(top: BukeerSpacing.xs),
                        child: Text(
                          valueOrDefault<String>(
                            widget!.description,
                            'Descripción',
                          ),
                          style: FlutterFlowTheme.of(context)
                              .bodyMedium
                              .override(
                                fontFamily: FlutterFlowTheme.of(context)
                                    .bodyMediumFamily,
...
